# games101-homework-framework

./: .gitattributes  CMakeLists.txt  README.md  README.txt
assignment0/: CMakeLists.txt
assignment1/: CMakeLists.txt  main.cpp  rasterizer.hpp  triangle.cpp
assignment2/: CMakeLists.txt  main.cpp  rasterizer.hpp  triangle.cpp
assignment3/: CMakeLists.txt  main.cpp  rasterizer.hpp  shader.hpp  triangle.cpp  triangle.hpp
assignment4/: CMakeLists.txt
assignment5/: CMakeLists.txt  light.hpp  main.cpp  object.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sphere.hpp  triangle.hpp
assignment6/: CMakeLists.txt  bounds3.hpp  bvh.cpp  bvh.hpp  intersection.hpp  light.hpp  main.cpp  material.hpp  object.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sphere.hpp  triangle.hpp
assignment7/: CMakeLists.txt  area-light.hpp  bounds3.hpp  bvh.cpp  bvh.hpp  intersection.hpp  main.cpp  material.hpp  object.hpp  ray.hpp  renderer.cpp  scene.cpp  scene.hpp  sphere.hpp  triangle.hpp  vector.cpp
assignment8/: CMakeLists.txt
assignment8/src/: CMakeLists.txt
