cmake_minimum_required(VERSION 3.2)
project(games101)

add_subdirectory(freetype)
add_subdirectory(assignment0)
add_subdirectory(assignment1)
add_subdirectory(assignment2)
add_subdirectory(assignment3)
add_subdirectory(assignment4)
add_subdirectory(assignment5)
add_subdirectory(assignment6)
add_subdirectory(assignment7)
add_subdirectory(assignment8)

